fix: update deployment workflow and URLs for GitHub Pages; enhance base URL in index.html and manifest

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <base href="%PUBLIC_URL%/" />
+    <base href="https://jonx0037.github.io/ds6371-unit3/" />
     <title>DS 6371 Unit 3 - Digital Garden</title>
   </head>
   <body>
